testdata/snapshots/hgrep__tests__ripgrep_config__regex_size_limit_parse_error.snap
---
source: src/main.rs
expression: msg
---
"Could not parse --regex-size-limit option value as size string -> Could not parse \"foo\" as unsigned integer -> invalid digit found in string"
