testdata/snapshots/hgrep__tests__ripgrep_config__too_many_u_flags_single.snap
---
source: src/main.rs
expression: msg
---
"-u or --unrestricted cannot be repeated more than twice. Try -uu to search every text file"
